--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   padding: 10px;
   border: 1px solid black;
   border-radius: 4px;
+  transition: background 0.5s ease;
 }
 
 .countries-tab label.selected {
@@ -41,4 +42,9 @@ input {
   .chart-conatiner {
     height: 70vh;
   }
+}
+
+.countries-tab label:hover {
+  background: gray;
+  color: white;
 }
